PA_Education/TestMenifest/force-app/main/default/objects/PriorExpenseApplication__c/PriorExpenseApplication__c.object-meta.xml
<CustomObject>
    <label>경비사전승인</label>
    <nameField>
        <label>경비사전승인 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>