PA_Education/TestMenifest/force-app/main/default/objects/PriorExpenseApplication__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>승인상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>작성중</fullName>
                <default>true</default>
                <label>작성중</label>
            </value>
            <value>
                <fullName>승인요청</fullName>
            </value>
            <value>
                <fullName>승인반려</fullName>
            </value>
            <value>
                <fullName>승인완료</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>