PA_Education/TestMenifest/force-app/main/default/objects/PriorExpenseApplication__c/fields/AttendeeNumber__c.field-meta.xml
<CustomField>
    <fullName>AttendeeNumber__c</fullName>
    <label>참석인원수</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>