PA_Education/TestMenifest/force-app/main/default/objects/PriorExpenseApplication__c/fields/ExpenseDetail__c.field-meta.xml
<CustomField>
    <fullName>ExpenseDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Detail</label>
    <referenceTo>ExpenseDetail__c</referenceTo>
    <relationshipLabel>경비사전승인</relationshipLabel>
    <relationshipName>PriorExpenseApplication_ExpenseDetail</relationshipName>
    <type>Lookup</type>
</CustomField>