PA_Education/TestMenifest/force-app/main/default/objects/PriorExpenseApplication__c/fields/FirstExpenseRequest__c.field-meta.xml
<CustomField>
    <fullName>FirstExpenseRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1차 승인자 지정</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FirstExpenseRequest_User</relationshipName>
    <type>Lookup</type>
</CustomField>