PA_Education/TestMenifest/force-app/main/default/objects/PriorExpenseApplication__c/fields/fm_ExpenseApplicatedYn__c.field-meta.xml
<CustomField>
    <fullName>fm_ExpenseApplicatedYn__c</fullName>
    <formula>IF(ISBLANK( ExpenseDetail__c ), FALSE, TRUE)</formula>
    <label>경비신청여부</label>
    <type>Checkbox</type>
</CustomField>