PA_Education/TestMenifest/force-app/main/default/objects/PriorExpenseApplication__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>영업기회</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>경비사전승인</relationshipLabel>
    <relationshipName>SalesOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>