PA_Education/TestMenifest/force-app/main/default/objects/PriorExpenseApplication__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>장소</label>
    <length>225</length>
    <type>Text</type>
</CustomField>