PA_Education/TestMenifest/force-app/main/default/objects/PriorExpenseApplication__c/fields/SecondApproverRequest__c.field-meta.xml
<CustomField>
    <fullName>SecondApproverRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2차 승인자 지정</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SecondApproverRequest_User</relationshipName>
    <type>Lookup</type>
</CustomField>