PA_Education/TestMenifest/force-app/main/default/objects/PriorExpenseApplication__c/fields/UseDate__c.field-meta.xml
<CustomField>
    <fullName>UseDate__c</fullName>
    <label>사용일자</label>
    <required>true</required>
    <type>Date</type>
</CustomField>