PA_Education/TestMenifest/force-app/main/default/objects/PriorExpenseApplication__c/fields/UsePurpose__c.field-meta.xml
<CustomField>
    <fullName>UsePurpose__c</fullName>
    <label>사용목적</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>프로젝트</fullName>
            </value>
            <value>
                <fullName>영업</fullName>
            </value>
            <value>
                <fullName>경영관리</fullName>
            </value>
            <value>
                <fullName>동호회</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>