PA_Education/TestMenifest/force-app/main/default/objects/PriorExpenseApplication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UsePurpose__c</columns>
    <columns>Project__c</columns>
    <columns>UseDate__c</columns>
    <columns>AttendeeNumber__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>